.metadata/.plugins/org.eclipse.cdt.ui/Gift.build.log
17:46:31 **** Incremental Build of configuration Debug for project Gift ****
make all 
Building file: ../gift.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -MMD -MP -MF"gift.d" -MT"gift.o" -o "gift.o" "../gift.cpp"
../gift.cpp: In function ‘int main()’:
../gift.cpp:12:17: error: missing template arguments before ‘people’
   unordered_map people;
                 ^
../gift.cpp:12:17: error: expected ‘;’ before ‘people’
../gift.cpp:16:3: error: ‘people’ was not declared in this scope
   people.resize(numPeople);
   ^
make: *** [gift.o] Error 1

17:46:32 Build Finished (took 748ms)

